tdf#122899 use unsigned integer for mso_sptArc

The path coordinates were read as sal_Int16. But for a
mso_sptArc shape the values are unsigned integer. I correct
it for this shape type only, because I don't know, whether
other places actually need sal_Int16.
The change from 0xa504 to 0xa604 in the defaults means a
change from 'ClockwiseArcTo' to 'ClockwiseArc' so that an
implicit moveto is used, same as in VML command 'wr'.

Change-Id: Ib9c594c15d5a97048595efd644a4a6e8774fcefd